[package]
name = "groupme-rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# The web framework
axum = "0.7"

# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for GroupMe API calls
reqwest = { version = "0.12", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities for serving files and logging
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Logging and Debugging
tracing = "0.1"
tracing-subscriber = "0.3"
